# lofty

./: .gitignore  CMakeLists.txt  Makefile  Makefile.inc  README  README.md  abaclade.abamk  abaclade.comk  abaclade.doxyfile  abc.abcmk  abc.sln  abc.vcxproj  abc.vcxproj.filters  conanfile.py  lofty.comk  lofty.doxyfile
doc/: 1048-Base_data_types.fodg  4872-IO_class_hierarchy.fodg  8190-Exception_class_hierarchy.fodg  Exception_class_hierarchy.fodg  IO_class_hierarchy.fodg  diagrams.fodg  diagrams.odg
examples/: cat.cxx  coroutines.cxx  echo-server.cxx  exceptions.cxx  hello-world.cxx  http-server.cxx  maps-comparison.cxx  udp-client.cxx  udp-echo-server.cxx
include/: abaclade.hxx  abc.hxx  lofty.hxx
include/abaclade/: _map_base.hxx  _std-before-memory.hxx  _std-before-noncopyable.hxx  _std.hxx  _vextr.hxx  app.hxx  atomic.hxx  bitmanip.hxx  byte_order.hxx  byteorder.hxx  char.hxx  codepoint_iterator-after-to_str.hxx  codepoint_iterator.hxx  collections.hxx  coroutine.hxx  coroutine_local.hxx  cpp.hxx  cppmacros.hxx  defer_to_scope_end.hxx  destructing_unfinalized_object.hxx  enum-after-str.hxx  enum-after-to_str.hxx  enum-text-streaming.hxx  enum.hxx  event_loop.hxx  exception-after-str.hxx  exception-after-to_str.hxx  exception-text-streaming.hxx  exception.hxx  explicit_operator_bool.hxx  file_path.hxx  from_str-after-str_istream.hxx  from_str-after-str_reader.hxx  from_str.hxx  from_text_istream.hxx  io.hxx  list.hxx  map.hxx  math.hxx  memory-after-exception.hxx  (+32 more)
include/abc/: _map_base.hxx  _vextr.hxx  app.hxx  atomic.hxx  bitmanip.hxx  byteorder.hxx  char.hxx  core.hxx  cppmacros.hxx  enum-after-str.hxx  enum-after-to_str.hxx  enum.hxx  exception-after-str.hxx  exception-after-to_str.hxx  exception-after-to_str_backend.hxx  exception.hxx  file.hxx  file_iostream.hxx  file_path.hxx  io.hxx  iostream.hxx  map.hxx  math.hxx  memory-after-exception.hxx  memory.hxx  module.hxx  numeric.hxx  persto.hxx  pointer_iterator-after-to_str.hxx  pointer_iterator.hxx  str-after-str_iostream.hxx  str-after-str_writer.hxx  str-after-to_str.hxx  str.hxx  str_iostream.hxx  string.hxx  string_iostream.hxx  text.hxx  to_str-after-str-after-to_str.hxx  to_str-after-str_iostream.hxx  (+10 more)
include/lofty/: _std-before-memory.hxx  _std-before-noncopyable.hxx  _std.hxx  app.hxx  bitmanip.hxx  byte_order.hxx  collections.hxx  coroutine.hxx  coroutine_local.hxx  cpp.hxx  defer_to_scope_end.hxx  destructing_unfinalized_object.hxx  enum-0.hxx  enum-text-streaming.hxx  enum.hxx  event.hxx  exception.hxx  explicit_operator_bool.hxx  from_str.hxx  from_text_istream.hxx  host.hxx  io.hxx  keyed_demux.hxx  logging.hxx  math.hxx  memory-after-exception.hxx  memory.hxx  mutex.hxx  net.hxx  noncopyable.hxx  numeric.hxx  os.hxx  persto.hxx  process.hxx  range.hxx  text-0.hxx  text-1.hxx  text-before-exception-and-str.hxx  text.hxx  thread.hxx  (+6 more)
src/: _vextr.cxx  atomic.cxx  bitmanip.cxx  byteorder.cxx  core.cxx  enum.cxx  exception.cxx  file.cxx  file_iostream.cxx  file_path.cxx  fnv_hash_basis.py  iostream.cxx  memory.cxx  module.cxx  str.cxx  str_iostream.cxx  string.cxx  string_iostream.cxx  text.cxx  to_str_backend.cxx  to_string_backend.cxx  trace.cxx  utf_traits.cxx
src/abaclade/: _vextr.cxx  abaclade.cxx  app.cxx  atomic.cxx  bitmanip.cxx  byte_order.cxx  byteorder.cxx  codepoint_iterator.cxx  collections.cxx  context_local.cxx  coroutine-scheduler.hxx  coroutine.cxx  coroutine_local.cxx  destructing_unfinalized_object.cxx  enum.cxx  event_loop.cxx  exception-eahm-posix.cxx  exception-errno-posix.cxx  exception-os.cxx  io.cxx  (+38 more)
src/abaclade-test/: abaclade-test.cxx  enum.cxx  exception.cxx  file_path.cxx  io-text-writer-print.cxx  list.cxx  map.cxx  range.cxx  str.cxx  str_traits.cxx  text-str_traits.cxx  thread.cxx  to_str.cxx  utf_traits.cxx  vector.cxx
src/abaclade-test-cppmacros/: cppmacros.cxx  cppmacros.cxx.i
src/abaclade-test-io-text/: binbuf_writer-write-stdout-utf16be.cxx  binbuf_writer-write-stdout-utf32le.cxx  binbuf_writer-write-stdout-utf8.cxx  utf32le+bom.txt  utf32le.txt
src/abaclade-testing/: app.cxx  runner.cxx  test_case.cxx  utility.cxx
tools/: fnv_hash_basis.py
vsproj/: abc-test.vcxproj  abc-test.vcxproj.filters  abc-testing.vcxproj  abc-testing.vcxproj.filters  abc.vcxproj  abc.vcxproj.filters
(+532 files in other folders)
